# ejemplo_sdd_copilot

./: README.md  pyproject.toml
.agents/: AGENTS.md
.agents/skills/qa_tester/: SKILL.md
.agents/skills/sdd_coder/: SKILL.md
.agents/skills/sdd_workflow/: SKILL.md
.agents/skills/spec_writer/: SKILL.md
.agents/skills/tester/: SKILL.md
.github/: copilot-instructions.md
docs/: agent_orchestration.md
docs/specs/: task_management.md
src/task_manager/: __init__.py  main.py  models.py
tests/: test_task_manager.py
